# sonic-utilities

./: .bazelrc  BUILD.bazel  MODULE.bazel  annotations.toml  py_test_wrapper.bzl  pyproject.toml  setup.py
acl_loader/: BUILD.bazel
bazel/: BUILD.bazel
clear/: BUILD.bazel
clear/plugins/: BUILD.bazel
config/: BUILD.bazel
config/plugins/: BUILD.bazel
config/plugins/auto/: BUILD.bazel
connect/: BUILD.bazel
consutil/: BUILD.bazel
counterpoll/: BUILD.bazel
crm/: BUILD.bazel
debug/: BUILD.bazel
dump/: BUILD.bazel
dump/plugins/: BUILD.bazel
fdbutil/: BUILD.bazel
flow_counter_util/: BUILD.bazel
fwutil/: BUILD.bazel
gcu/: BUILD.bazel
generic_config_updater/: BUILD.bazel
pcieutil/: BUILD.bazel
pddf_fanutil/: BUILD.bazel
pddf_ledutil/: BUILD.bazel
pddf_psuutil/: BUILD.bazel
pddf_thermalutil/: BUILD.bazel
pfc/: BUILD.bazel
pfcwd/: BUILD.bazel
psuutil/: BUILD.bazel
rcli/: BUILD.bazel
scripts/: BUILD.bazel
sfputil/: BUILD.bazel
show/: BUILD.bazel
show/interfaces/: BUILD.bazel
show/plugins/: BUILD.bazel
sonic-utilities-data/: BUILD.bazel
sonic_cli_gen/: BUILD.bazel
sonic_installer/: BUILD.bazel
sonic_installer/bootloader/: BUILD.bazel
sonic_package_manager/: BUILD.bazel
sonic_package_manager/service_creator/: BUILD.bazel
ssdutil/: BUILD.bazel
syslog_util/: BUILD.bazel
tests/: BUILD.bazel
tests/bfd_input/: BUILD.bazel
tests/bgp_commands_input/: BUILD.bazel
tests/bgp_input/: BUILD.bazel
tests/buffer_input/: BUILD.bazel
tests/cli_autogen_input/: BUILD.bazel
tests/cli_autogen_input/autogen_test/: BUILD.bazel
tests/cli_autogen_input/yang_parser_test/: BUILD.bazel
tests/dump_tests/: BUILD.bazel
tests/dump_tests/module_tests/: BUILD.bazel
tests/ecn_input/: BUILD.bazel
tests/fdbshow_input/: BUILD.bazel
tests/fibshow_input/: BUILD.bazel
tests/filter_fdb_input/: BUILD.bazel
tests/fine_grained_ecmp_input/: BUILD.bazel
tests/generic_config_updater/: BUILD.bazel
tests/hash_input/: BUILD.bazel
tests/ldap_input/: BUILD.bazel
tests/mmuconfig_input/: BUILD.bazel
tests/mock_platform_sfputil/: BUILD.bazel
tests/mock_tables/: BUILD.bazel
tests/mock_tables/asic0/: BUILD.bazel
tests/mock_tables/asic1/: BUILD.bazel
tests/mock_tables/asic2/: BUILD.bazel
tests/mocked_libs/: BUILD.bazel
tests/nvgre_tunnel_input/: BUILD.bazel
tests/passw_hardening_input/: BUILD.bazel
tests/pbh_input/: BUILD.bazel
tests/pfc_input/: BUILD.bazel
tests/pfcstat_input/: BUILD.bazel
tests/pfcwd_input/: BUILD.bazel
tests/portstat_input/: BUILD.bazel
tests/queuestat_input/: BUILD.bazel
tests/sonic_package_manager/: BUILD.bazel
tests/switchstat_input/: BUILD.bazel
tests/syslog_input/: BUILD.bazel
tests/trimming_input/: BUILD.bazel
tests/wm_input/: BUILD.bazel
undebug/: BUILD.bazel
utilities_common/: BUILD.bazel
watchdogutil/: BUILD.bazel
