load("@aspect_rules_py//py:defs.bzl", "py_library")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@gazelle//:def.bzl", "gazelle")

# Generate targets from rules_py instead of rules_python.
#
# gazelle:map_kind py_library py_library @aspect_rules_py//py:defs.bzl
# gazelle:map_kind py_binary py_binary @aspect_rules_py//py:defs.bzl
# gazelle:map_kind py_test py_test //:py_test_wrapper.bzl

# Respect relative imports in package mode
#
# gazelle:python_generation_mode package
# gazelle:python_experimental_allow_relative_imports true
# gazelle:python_generation_mode_per_file_include_init true

# Make everyone depend on all deps
#
# gazelle:resolve_regexp py .* //:all_deps

# Override default resolution for in-source mappings, from `packages` in pyproject.toml
#
# gazelle:resolve_regexp py ^acl_loader$ //acl_loader
# gazelle:resolve_regexp py ^acl_loader\. //acl_loader
# gazelle:resolve_regexp py ^clear$ //clear
# gazelle:resolve_regexp py ^clear\. //clear
# gazelle:resolve_regexp py ^clear\.plugins$ //clear/plugins
# gazelle:resolve_regexp py ^clear\.plugins\. //clear/plugins
# gazelle:resolve_regexp py ^clear\.plugins.auto$ //clear/plugins/auto
# gazelle:resolve_regexp py ^clear\.plugins.auto\. //clear/plugins/auto
# gazelle:resolve_regexp py ^config$ //config
# gazelle:resolve_regexp py ^config\. //config
# gazelle:resolve_regexp py ^config\.plugins$ //config/plugins
# gazelle:resolve_regexp py ^config\.plugins\. //config/plugins
# gazelle:resolve_regexp py ^config\.plugins.auto$ //config/plugins/auto
# gazelle:resolve_regexp py ^config\.plugins.auto\. //config/plugins/auto
# gazelle:resolve_regexp py ^connect$ //connect
# gazelle:resolve_regexp py ^connect\. //connect
# gazelle:resolve_regexp py ^consutil$ //consutil
# gazelle:resolve_regexp py ^consutil\. //consutil
# gazelle:resolve_regexp py ^counterpoll$ //counterpoll
# gazelle:resolve_regexp py ^counterpoll\. //counterpoll
# gazelle:resolve_regexp py ^crm$ //crm
# gazelle:resolve_regexp py ^crm\. //crm
# gazelle:resolve_regexp py ^debug$ //debug
# gazelle:resolve_regexp py ^debug\. //debug
# gazelle:resolve_regexp py ^generic_config_updater$ //generic_config_updater
# gazelle:resolve_regexp py ^generic_config_updater\. //generic_config_updater
# gazelle:resolve_regexp py ^pfcwd$ //pfcwd
# gazelle:resolve_regexp py ^pfcwd\. //pfcwd
# gazelle:resolve_regexp py ^sfputil$ //sfputil
# gazelle:resolve_regexp py ^sfputil\. //sfputil
# gazelle:resolve_regexp py ^ssdutil$ //ssdutil
# gazelle:resolve_regexp py ^ssdutil\. //ssdutil
# gazelle:resolve_regexp py ^pfc$ //pfc
# gazelle:resolve_regexp py ^pfc\. //pfc
# gazelle:resolve_regexp py ^psuutil$ //psuutil
# gazelle:resolve_regexp py ^psuutil\. //psuutil
# gazelle:resolve_regexp py ^flow_counter_util$ //flow_counter_util
# gazelle:resolve_regexp py ^flow_counter_util\. //flow_counter_util
# gazelle:resolve_regexp py ^fdbutil$ //fdbutil
# gazelle:resolve_regexp py ^fdbutil\. //fdbutil
# gazelle:resolve_regexp py ^fwutil$ //fwutil
# gazelle:resolve_regexp py ^fwutil\. //fwutil
# gazelle:resolve_regexp py ^pcieutil$ //pcieutil
# gazelle:resolve_regexp py ^pcieutil\. //pcieutil
# gazelle:resolve_regexp py ^pddf_fanutil$ //pddf_fanutil
# gazelle:resolve_regexp py ^pddf_fanutil\. //pddf_fanutil
# gazelle:resolve_regexp py ^pddf_psuutil$ //pddf_psuutil
# gazelle:resolve_regexp py ^pddf_psuutil\. //pddf_psuutil
# gazelle:resolve_regexp py ^pddf_thermalutil$ //pddf_thermalutil
# gazelle:resolve_regexp py ^pddf_thermalutil\. //pddf_thermalutil
# gazelle:resolve_regexp py ^pddf_ledutil$ //pddf_ledutil
# gazelle:resolve_regexp py ^pddf_ledutil\. //pddf_ledutil
# gazelle:resolve_regexp py ^syslog_util$ //syslog_util
# gazelle:resolve_regexp py ^syslog_util\. //syslog_util
# gazelle:resolve_regexp py ^rcli$ //rcli
# gazelle:resolve_regexp py ^rcli\. //rcli
# gazelle:resolve_regexp py ^show$ //show
# gazelle:resolve_regexp py ^show\. //show
# gazelle:resolve_regexp py ^show.interfaces$ //show/interfaces
# gazelle:resolve_regexp py ^show.interfaces\. //show/interfaces
# gazelle:resolve_regexp py ^show.plugins$ //show/plugins
# gazelle:resolve_regexp py ^show.plugins\. //show/plugins
# gazelle:resolve_regexp py ^show.plugins.auto$ //show/plugins/auto
# gazelle:resolve_regexp py ^show.plugins.auto\. //show/plugins/auto
# gazelle:resolve_regexp py ^sonic_installer$ //sonic_installer
# gazelle:resolve_regexp py ^sonic_installer\. //sonic_installer
# gazelle:resolve_regexp py ^sonic_installer.bootloader$ //sonic_installer
# gazelle:resolve_regexp py ^sonic_installer.bootloader\. //sonic_installer
# gazelle:resolve_regexp py ^sonic_package_manager$ //sonic_package_manager
# gazelle:resolve_regexp py ^sonic_package_manager\. //sonic_package_manager
# gazelle:resolve_regexp py ^sonic_package_manager.service_creator$ //sonic_package_manager
# gazelle:resolve_regexp py ^sonic_package_manager.service_creator\. //sonic_package_manager
# gazelle:resolve_regexp py ^tests$ //tests
# gazelle:resolve_regexp py ^tests\. //tests
# gazelle:resolve_regexp py ^undebug$ //undebug
# gazelle:resolve_regexp py ^undebug\. //undebug
# gazelle:resolve_regexp py ^watchdogutil$ //watchdogutil
# gazelle:resolve_regexp py ^watchdogutil\. //watchdogutil
# gazelle:resolve_regexp py ^sonic_cli_gen$ //sonic_cli_gen
# gazelle:resolve_regexp py ^sonic_cli_gen\. //sonic_cli_gen
# gazelle:resolve_regexp py ^mock_tables$ //tests/mock_tables
# gazelle:resolve_regexp py ^mock_tables\. //tests/mock_tables

# Targets that have to be globbed in //:common to avoid cycles
#
# gazelle:resolve_regexp py ^utilities_common$ //:common
# gazelle:resolve_regexp py ^utilities_common\. //:common
# gazelle:resolve_regexp py ^dump$ //:common
# gazelle:resolve_regexp py ^dump\. //:common
# gazelle:resolve_regexp py ^dump\.plugins$ //:common
# gazelle:resolve_regexp py ^dump\.plugins\. //:common
gazelle(
    name = "gazelle",
    gazelle = "@multitool//tools/gazelle",
)

# There is a dependency cycle between utilities_common, dump and dump/plugins.
# We create a unified target with the relevant sources and tell gazelle to depend on that
# instead of the individual libraries.
py_library(
    name = "common",
    srcs = [
        "//dump:srcs",
        "//utilities_common:srcs",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
    ],
)

# TODO BL: This should be a select per-platform
py_library(
    name = "platform_deps",
    deps = [],
)

py_library(
    name = "all_deps",
    visibility = ["//:__subpackages__"],
    deps = [
        "//scripts:scripts_srcs",  # keep
        "@sonic_utilities_pip//bcrypt",
        "@sonic_utilities_pip//click",
        "@sonic_utilities_pip//cryptography",
        "@sonic_utilities_pip//urllib3",
        "@sonic_utilities_pip//click_log",
        "@sonic_utilities_pip//docker",
        "@sonic_utilities_pip//docker_image_py",
        "@sonic_utilities_pip//filelock",
        "@sonic_utilities_pip//enlighten",
        "@sonic_utilities_pip//ijson",
        "@sonic_utilities_pip//ipaddress",
        "@sonic_utilities_pip//protobuf",
        "@sonic_utilities_pip//jinja2",
        "@sonic_utilities_pip//jsondiff",
        "@sonic_utilities_pip//jsonpatch",
        "@sonic_utilities_pip//jsonpointer",
        # TODO BL: Doesn't resolve -- sdist only?
        # "@sonic_utilities_pip//m2crypto",
        "@sonic_utilities_pip//natsort",
        "@sonic_utilities_pip//netaddr",
        "@sonic_utilities_pip//netifaces",
        "@sonic_utilities_pip//paramiko",
        "@sonic_utilities_pip//pexpect",
        "@sonic_utilities_pip//semantic_version",
        "@sonic_utilities_pip//prettyprinter",
        "@sonic_utilities_pip//pyroute2",
        "@sonic_utilities_pip//requests",
        "@sonic_utilities_pip//tabulate",
        "@sonic_utilities_pip//toposort",
        "@sonic_utilities_pip//www_authenticate",
        "@sonic_utilities_pip//xmltodict",
        "@sonic_utilities_pip//lazy_object_proxy",
        "@sonic_utilities_pip//six",
        "@sonic_utilities_pip//scp",
        "@sonic_utilities_pip//sonic_config_engine",
        "@sonic_utilities_pip//sonic_platform_common",
        "@sonic_utilities_pip//sonic_py_common",
        "@sonic_utilities_pip//sonic_yang_mgmt",
        # Test dependencies
        "@sonic_utilities_pip//responses",
        "@sonic_utilities_pip//deepdiff",
        "@sonic_utilities_pip//mock",
        "@sonic_utilities_pip//mockredispy",
        "@sonic_utilities_pip//pytest",
    ],
)

# TODO BL: THis should be removed
py_library(
    name = "empty",
    srcs = [],
    visibility = ["//visibility:public"],
)

py_library(
    name = "sonic-utilities",
    srcs = ["setup.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

bzl_library(
    name = "py_test_wrapper",
    srcs = ["py_test_wrapper.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@aspect_rules_py//py:defs"],
)
