load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//config",
        "//utilities_common",
    ],
)

py_library(
    name = "acl_loader",
    srcs = [
        "__init__.py",
        "main.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//config",
        "//utilities_common",
    ],
)
