load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//utilities_common",
    ],
)

py_library(
    name = "consutil",
    srcs = [
        "__init__.py",
        "lib.py",
        "main.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//utilities_common",
    ],
)
