load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

filegroup(
    name = "srcs",
    srcs = glob(["*.py"]),
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "debug",
    srcs = [
        "__init__.py",
        "main.py",
        "stp.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//:common",
    ],
)
